# gaussian-filter-gpu

./: .gitignore  README.md
CUDA/: CMakeLists.txt  README.md  gaussian.cu  main.cpp
opencl/: CMakeLists.txt  Makefile  README.md  gaussian.cl  gaussian.cpp  gaussian_cl.cpp  main.cpp
ordinary/: CMakeLists.txt  README.md  gaussian.cpp  gaussian.hpp  main.cpp
